--- a/index.html
+++ b/index.html
@@ -5,12 +5,312 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <link href="https://fonts.googleapis.com/css2?family=Zen+Tokyo+Zoo&display=swap" rel="stylesheet">
+    <link rel="shortcut icon" href="images/players/player-7.png" type="image/x-icon">
+    <link rel="stylesheet" href="style.css">
+    <title>Copa America 2021</title>
 </head>
 
 <body>
-    <h1>I am back to my work again</h1>
-    <p>It is hard but still I am dreaming that I will earn the black belt. insallah</p>
+    <header>
+        <!-- Navbar -->
+        <nav class="navbar container">
+            <ul class="nav-menu">
+                <a class="menu-item" href="#">Home</a>
+                <a class="menu-item" href="#">Clubs</a>
+                <a class="menu-item" href="#">World Cup 2023</a>
+                <a class="menu-item" href="#">Upcoming Matches</a>
+                <a class="menu-item" href="#">Contact</a>
+            </ul>
+            <div class="nav-logo">
+                <a class="button" href="#Subscribe">→] Log In</a>
+            </div>
+        </nav>
+        <!-- Hero Section -->
+        <section class="container hero-section">
+            <div class="intro-text">
+                <h1>Conmebol </br>Copa America </br>2021</h1>
+                <a class="button" href="#Subscribe">Watch Live</a>
+            </div>
+            <div class="intro-image">
+                <img src="images/banner.png" alt="">
+            </div>
+        </section>
+    </header>
+
+
+    <!--   Player Section   -->
+    <section class="container player-section">
+        <div class="player-section-title">
+            <h1>The Leading Players of The Teams</h1>
+        </div>
+        <div class="players">
+            <div class="player">
+                <div class="player-img">
+                    <img src="images/players/player-9.png" alt="">
+                </div>
+                <div class="player-detail">
+                    <h2>Mohammed Salah</h2>
+                    <p>Mohamed Salah Hamed Mahrous Ghaly is an Egyptian professional footballer who plays as a forward
+                        for
+                        Premier League club Liverpool and captains the Egypt national team. Considered one of the best
+                        players in the world, he is known for his finishing, dribbling, and speed.Mohamed Salah signed a
+                        5
+                        year / £52,000,000 contract with the Liverpool F.C.</p>
+                </div>
+            </div>
+            <div class="player">
+                <div class="player-img">
+                    <img src="images/players/player-5.png" alt="">
+                </div>
+                <div class="player-detail">
+                    <h2>Mesut Ozil (Germany)</h2>
+                    <p>After beginning his professional soccer career with FC Schalke 04, Mesut Özil emerged as a star
+                        midfielder for SV Werder Bremen and the German national team during the 2010 FIFA World Cup.
+                        Özil
+                        parlayed his international success into a prominent role with Real Madrid before announcing his
+                        transfer to England's Arsenal F.C. in 2013.</p>
+                </div>
+            </div>
+            <div class="player">
+                <div class="player-img">
+                    <img src="images/players/player-2.png" alt="">
+                </div>
+                <div class="player-detail">
+                    <h2>Lionel Messi</h2>
+                    <p>Lionel Messi is a soccer player with FC Barcelona and the Argentina national team. He has
+                        established
+                        records for goals scored and won individual awards en route to worldwide recognition as one of
+                        the
+                        best players in soccer.
+                        Was Lionel Messi a Hero? Lionel Messi is my hero because he helps a lot of people out when they
+                        are
+                        in need.
+                    </p>
+                </div>
+            </div>
+            <div class="player">
+                <div class="player-img">
+                    <img src="images/players/player-3.png" alt="">
+                </div>
+                <div class="player-detail">
+                    <h2>Cristiano Ronaldo</h2>
+                    <p>
+                        Cristiano Ronaldo dos Santos Aveiro GOIH ComM is a Portuguese professional footballer who plays
+                        as a
+                        forward for Serie A club Juventus and captains the Portugal national team.
+                        Cristiano Ronaldo, in full Cristiano Ronaldo dos Santos Aveiro, (born February 5, 1985, Funchal,
+                        Madeira, Portugal).</p>
+                </div>
+            </div>
+            <div class="player">
+                <div class="player-img">
+                    <img src="images/players/player-4.png" alt="">
+                </div>
+                <div class="player-detail">
+                    <h2>Paulo Dybala</h2>
+                    <p>
+                        Paulo Dybala (born 15 November 1993) is an Argentine footballer who plays as a forward for
+                        Italian
+                        club Juventus and the Argentina national team. He began his career as a professional footballer
+                        in
+                        2011 in the Argentine Second division. In 2012, he moved to Europe and signed for Palermo.
+                    </p>
+                </div>
+            </div>
+            <div class="player">
+                <div class="player-img">
+                    <img src="images/players/player-6.png" alt="">
+                </div>
+                <div class="player-detail">
+                    <h2>Mauro Emanuel Icardi</h2>
+                    <p>
+                        Mauro Emanuel Icardi (Spanish, born 19 February 1993) is an
+                        Argentine professional footballer who plays as a striker for Ligue 1 club Paris Saint-Germain
+                        and
+                        the Argentina national team.Icardi was controversially left out of Argentina's final squad for
+                        the 2018 FIFA World Cup.
+                    </p>
+                </div>
+            </div>
+            <div class="player">
+                <div class="player-img">
+                    <img src="images/players/player-7.png" alt="">
+                </div>
+                <div class="player-detail">
+                    <h2>Ángel Di María</h2>
+                    <p>
+                        Ángel Fabián di María (born 14 February 1988) is an Argentine professional footballer who plays
+                        for
+                        Ligue 1 club Paris Saint-Germain and the Argentina national team. He can play as either a winger
+                        or
+                        attacking midfielder. He is also the club's eight-highest goalscorer and all-time leader in
+                        assists.
+                    </p>
+                </div>
+            </div>
+            <div class="player">
+                <div class="player-img">
+                    <img src="images/players/player-8.png" alt="">
+                </div>
+                <div class="player-detail">
+                    <h2>Kylian Mbappé </h2>
+                    <p>
+                        Kylian Mbappé is a French professional football player, best known for his performance in the
+                        2018
+                        'FIFA World Cup. ...
+                        2021 The World's Highest-Paid Athletes Earnings. The star forward is Ligue 1's reigning player
+                        of
+                        the year and has
+                        won the award twice....
+                    </p>
+                </div>
+            </div>
+            <div class="player">
+                <div class="player-img">
+                    <img src="images/players/player-10.png" alt="">
+                </div>
+                <div class="player-detail">
+                    <h2>Harry Kane</h2>
+                    <p>
+                        Harry Edward Kane MBE (born 28 July 1993) is an English professional footballer who plays as a
+                        striker for Premier League club Tottenham Hotspur and captains the England national team.
+                        Regarded
+                        as one of the best strikers in the world, Kane is known for his prolific goalscoring record and
+                        ability to link play.
+                    </p>
+                </div>
+            </div>
+            <div class="player">
+                <div class="player-img">
+                    <img src="images/players/player-11.png" alt="">
+                </div>
+                <div class="player-detail">
+                    <h2>Kevin De Bruyne</h2>
+                    <p>
+                        Kevin De Bruyne is a Belgian professional footballer who plays as a midfielder for Premier
+                        League
+                        club Manchester City, where he is vice-captain, and the Belgium national team. De Bruyne began
+                        his
+                        career at Genk, where he was a regular player when they won the 2010–11 Belgian Pro League
+                    </p>
+                </div>
+            </div>
+            <div class="player">
+                <div class="player-img">
+                    <img src="images/players/player-1.png" alt="">
+                </div>
+                <div class="player-detail">
+                    <h2>Naymer Jr Gu</h2>
+                    <p>
+                        Neymar da Silva Santos Júnior, known as Neymar, is a Brazilian professional footballer who plays
+                        as
+                        a forward for Ligue 1 club Paris Saint-Germain. He is widely regarded
+                        as one of the best players in the world. Brazilian football player who was one of the most
+                        prolific scorers in his country's storied football history.
+                    </p>
+                </div>
+            </div>
+            <div class="player">
+                <div class="player-img">
+                    <img src="images/players/player-12.png" alt="">
+                </div>
+                <div class="player-detail">
+                    <h2>Philippe Coutinho</h2>
+                    <p>
+                        Philippe Coutinho Correia (born 12 June 1992) is a Brazilian professional footballer who plays
+                        as an
+                        attacking midfielder or winger for Spanish club Barcelona and the Brazil national team. He is
+                        known
+                        for his combination of vision, passing, dribbling and ability to conjure curving long-range
+                        strikes..
+                    </p>
+                </div>
+            </div>
+        </div>
+    </section>
+
+
+    <!-- Clubs Section -->
+    <section class="container club-section">
+        <div class="club-titles">
+            <h1>All Clubs of Copa America 2021 </h1>
+        </div>
+        <div class="clubs">
+            <div class="club-img">
+                <img src="images/clubs/club-1.gif" alt="">
+            </div>
+            <div class="club-img">
+                <img src="images/clubs/club-1.png" alt="">
+            </div>
+            <div class="club-img">
+                <img src="images/clubs/club-2.png" alt="">
+            </div>
+            <div class="club-img">
+                <img src="images/clubs/club-3.png" alt="">
+            </div>
+            <div class="club-img">
+                <img src="images/clubs/club-4.png" alt="">
+            </div>
+            <div class="club-img">
+                <img src="images/clubs/club-6.png" alt="">
+            </div>
+            <div class="club-img">
+                <img src="images/clubs/club-5.png" alt="">
+            </div>
+            <div class="club-img">
+                <img src="images/clubs/club-7.png" alt="">
+            </div>
+            <div class="club-img">
+                <img src="images/clubs/club-8.png" alt="">
+            </div>
+            <div class="club-img">
+                <img src="images/clubs/club-9.png" alt="">
+            </div>
+        </div>
+    </section>
+
+
+    <!-- Matches Section -->
+    <section class="container match-section">
+        <div class="intro-text">
+            <h1>All Highlights </br>Copa America 2021</h1>
+            <p>Copa America 2021 is over, and Argentina is the queen of South America after 28 years, with Messi finally
+                winning his first international title. It was a long journey with 4 group matches and three knock-out
+                matches.But let’s overview how the tournament went. After rejecting the invitation from CONMEBOL, Qatar
+                and Australia forced the competition to be formed of two groups of 5 teams each. Argentina, Chile,
+                Paraguay, Bolivia, and Uruguay were in Group A.</p>
+            <a class="button" href="#Subscribe">Watch Now →</a>
+        </div>
+        <div class="intro-image">
+            <img src="images/match.png" alt="">
+        </div>
+    </section>
+
+
+    <!-- Footer Section -->
+    <footer class="container footer-section">
+        <div class="logo">
+            <img src="images/Logo.png" alt="">
+        </div>
+        <div class="icons">
+            <div class="icon">
+                <img src="images/Social Icons/Instagram.png" alt="">
+            </div>
+            <div class="icon">
+                <img src="images/Social Icons/Twitter.png" alt="">
+            </div>
+            <div class="icon">
+                <img src="images/Social Icons/Youtube.png" alt="">
+            </div>
+            <div class="icon">
+                <img src="images/Social Icons/Dribbble.png" alt="">
+            </div>
+        </div>
+        <div class="end-line">
+            <p>Copy Right © 2022 Football</p>
+        </div>
+    </footer>
 </body>
 
 </html>
