--- a/index.html
+++ b/index.html
@@ -53,10 +53,7 @@
                     <h2>Mohammed Salah</h2>
                     <p>Mohamed Salah Hamed Mahrous Ghaly is an Egyptian professional footballer who plays as a forward
                         for
-                        Premier League club Liverpool and captains the Egypt national team. Considered one of the best
-                        players in the world, he is known for his finishing, dribbling, and speed.Mohamed Salah signed a
-                        5
-                        year / £52,000,000 contract with the Liverpool F.C.</p>
+                        Premier League club Liverpool and captains the Egypt national team. </p>
                 </div>
             </div>
             <div class="player">
@@ -67,9 +64,7 @@
                     <h2>Mesut Ozil (Germany)</h2>
                     <p>After beginning his professional soccer career with FC Schalke 04, Mesut Özil emerged as a star
                         midfielder for SV Werder Bremen and the German national team during the 2010 FIFA World Cup.
-                        Özil
-                        parlayed his international success into a prominent role with Real Madrid before announcing his
-                        transfer to England's Arsenal F.C. in 2013.</p>
+                    </p>
                 </div>
             </div>
             <div class="player">
@@ -83,9 +78,6 @@
                         records for goals scored and won individual awards en route to worldwide recognition as one of
                         the
                         best players in soccer.
-                        Was Lionel Messi a Hero? Lionel Messi is my hero because he helps a lot of people out when they
-                        are
-                        in need.
                     </p>
                 </div>
             </div>
@@ -99,8 +91,7 @@
                         Cristiano Ronaldo dos Santos Aveiro GOIH ComM is a Portuguese professional footballer who plays
                         as a
                         forward for Serie A club Juventus and captains the Portugal national team.
-                        Cristiano Ronaldo, in full Cristiano Ronaldo dos Santos Aveiro, (born February 5, 1985, Funchal,
-                        Madeira, Portugal).</p>
+                    </p>
                 </div>
             </div>
             <div class="player">
@@ -112,9 +103,7 @@
                     <p>
                         Paulo Dybala (born 15 November 1993) is an Argentine footballer who plays as a forward for
                         Italian
-                        club Juventus and the Argentina national team. He began his career as a professional footballer
-                        in
-                        2011 in the Argentine Second division. In 2012, he moved to Europe and signed for Palermo.
+                        club Juventus and the Argentina national team.
                     </p>
                 </div>
             </div>
@@ -128,8 +117,7 @@
                         Mauro Emanuel Icardi (Spanish, born 19 February 1993) is an
                         Argentine professional footballer who plays as a striker for Ligue 1 club Paris Saint-Germain
                         and
-                        the Argentina national team.Icardi was controversially left out of Argentina's final squad for
-                        the 2018 FIFA World Cup.
+                        the Argentina national team.
                     </p>
                 </div>
             </div>
@@ -142,10 +130,7 @@
                     <p>
                         Ángel Fabián di María (born 14 February 1988) is an Argentine professional footballer who plays
                         for
-                        Ligue 1 club Paris Saint-Germain and the Argentina national team. He can play as either a winger
-                        or
-                        attacking midfielder. He is also the club's eight-highest goalscorer and all-time leader in
-                        assists.
+                        Ligue 1 club Paris Saint-Germain and the Argentina national team.
                     </p>
                 </div>
             </div>
@@ -159,10 +144,7 @@
                         Kylian Mbappé is a French professional football player, best known for his performance in the
                         2018
                         'FIFA World Cup. ...
-                        2021 The World's Highest-Paid Athletes Earnings. The star forward is Ligue 1's reigning player
-                        of
-                        the year and has
-                        won the award twice....
+                        2021 The World's Highest-Paid Athletes Earnings.
                     </p>
                 </div>
             </div>
@@ -175,9 +157,7 @@
                     <p>
                         Harry Edward Kane MBE (born 28 July 1993) is an English professional footballer who plays as a
                         striker for Premier League club Tottenham Hotspur and captains the England national team.
-                        Regarded
-                        as one of the best strikers in the world, Kane is known for his prolific goalscoring record and
-                        ability to link play.
+
                     </p>
                 </div>
             </div>
@@ -190,9 +170,7 @@
                     <p>
                         Kevin De Bruyne is a Belgian professional footballer who plays as a midfielder for Premier
                         League
-                        club Manchester City, where he is vice-captain, and the Belgium national team. De Bruyne began
-                        his
-                        career at Genk, where he was a regular player when they won the 2010–11 Belgian Pro League
+                        club Manchester City, where he is vice-captain.
                     </p>
                 </div>
             </div>
@@ -205,9 +183,7 @@
                     <p>
                         Neymar da Silva Santos Júnior, known as Neymar, is a Brazilian professional footballer who plays
                         as
-                        a forward for Ligue 1 club Paris Saint-Germain. He is widely regarded
-                        as one of the best players in the world. Brazilian football player who was one of the most
-                        prolific scorers in his country's storied football history.
+                        a forward for Ligue 1 club Paris Saint-Germain.
                     </p>
                 </div>
             </div>
@@ -220,10 +196,7 @@
                     <p>
                         Philippe Coutinho Correia (born 12 June 1992) is a Brazilian professional footballer who plays
                         as an
-                        attacking midfielder or winger for Spanish club Barcelona and the Brazil national team. He is
-                        known
-                        for his combination of vision, passing, dribbling and ability to conjure curving long-range
-                        strikes..
+                        attacking midfielder or winger for Spanish club Barcelona and the Brazil national team.
                     </p>
                 </div>
             </div>
@@ -277,9 +250,7 @@
             <h1>All Highlights </br>Copa America 2021</h1>
             <p>Copa America 2021 is over, and Argentina is the queen of South America after 28 years, with Messi finally
                 winning his first international title. It was a long journey with 4 group matches and three knock-out
-                matches.But let’s overview how the tournament went. After rejecting the invitation from CONMEBOL, Qatar
-                and Australia forced the competition to be formed of two groups of 5 teams each. Argentina, Chile,
-                Paraguay, Bolivia, and Uruguay were in Group A.</p>
+                matches.But let’s overview how the tournament went. After rejecting the invitation from CONMEBOL.</p>
             <a class="button" href="#Subscribe">Watch Now →</a>
         </div>
         <div class="intro-image">
